# deinamig

./: CMakeLists.txt  README.md
include/: deinamig.h
include/deinamig/: windows.h
tests/: test.cpp
